# Gemstone-price-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  test.py  text.txt  tox.ini
.github/workflows/: ci.yml  cicd.yml
DimondPricePrediction.egg-info/: PKG-INFO  SOURCES.txt
experiment/: experiments.ipynb
src/MongoDB_Connect.egg-info/: PKG-INFO  SOURCES.txt
src/components/: data_ingestion.py  model_evaluation.py
src/exception/: exception.py
src/pipeline/: training_pipeline.py
templates/: index.html
tests/integration/: test_training_pipeline.py
tests/unit/: test_data_ingestion.py  test_data_transformation.py  test_model_trainer.py
