[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemstone-price-prediction"
version = "0.1.0"
description = "A machine learning project for predicting gemstone prices"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Add your project dependencies here
    # "pandas",
    # "numpy",
    # "scikit-learn",
    # "matplotlib",
    # "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "flake8",
    "isort",
]

[project.urls]
Homepage = "https://github.com/Anisshaikh27/gemstone-price-prediction"
Repository = "https://github.com/Anisshaikh27/gemstone-price-prediction"
Issues = "https://github.com/Anisshaikh27/gemstone-price-prediction/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = ["test_.py", "_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]